--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,6 +7,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>João Belo</title>
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ceviche+One" rel="stylesheet">
   </head>
   <body>
     <noscript>
